Get Albums now populates the ListBox

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,5 @@ Discriminate between folders that keep order and folders that don't - maybe by s
 	* at the moment they're either all randomised or all non-randomised
 	
 Add startAtIndex and countLimit to each album
+
+Add Select All and Select None
